# cpp_project

./: CMakeLists.txt  main.cpp  test_add.cpp
.github/workflows/: test.yaml
